--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Yiğit TUNCAY
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Kişisel Sayfam</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  <header>
+    <h1>Hoş Geldiniz!</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">Hakkımda</a></li>
+        <li><a href="#services">Hizmetlerim</a></li>
+        <li><a href="#portfolio">Portfolyo</a></li>
+        <li><a href="#contact">İletişim</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>Hakkımda</h2>
+      <p>Benim adım [İsim Soyisim]. [Yaşınız] yaşındayım ve [şehir] şehrinde yaşıyorum. [Hobileriniz/İlgi alanlarınız vb.] gibi konularda meraklıyım ve zamanımın çoğunu bu konulara ayırıyorum. Ayrıca, [alanınızda ne iş yaptığınızı/okuduğunuzu vb.]</p>
+    </section>
+
+    <section id="services">
+      <h2>Hizmetlerim</h2>
+      <ul>
+        <li><span class="icon"></span>Web Tasarımı</li>
+        <li><span class="icon"></span>Web Geliştirme</li>
+        <li><span class="icon"></span>SEO</li>
+      </ul>
+    </section>
+
+    <section id="portfolio">
+      <h2>Portfolyo</h2>
+      <div class="grid">
+        <figure>
+          <img src="https://via.placeholder.com/500x350" alt="Proje 1">
+          <figcaption>Caption 1</figcaption>
+        </figure>
+        <figure>
+          <img src="https://via.placeholder.com/500x350" alt="Proje 2">
+          <figcaption>Caption 2</figcaption>
+        </figure>
+        <figure>
+          <img src="https://via.placeholder.com/500x350" alt="Proje 3">
+          <figcaption>Caption 3</figcaption>
+        </figure>
+        <figure>
+          <img src="https://via.placeholder.com/500x350" alt="Proje 4">
+          <figcaption>Caption 4</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>İletişim</h2>
+      <form>
+        <label for="name">İsim:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">E-posta:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Mesaj:</label>
+        <textarea id="message" name="message" required></textarea>
+        <button type="submit">Gönder</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2023 - Kişisel Sayfam</p>
+  </footer>
+</body>
+</html>
