--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <ul>
         <li><a href="#about">Hakkımda</a></li>
         <li><a href="#services">Hizmetlerim</a></li>
-        <li><a href="#portfolio">Portfolyo</a></li>
         <li><a href="#contact">İletişim</a></li>
       </ul>
     </nav>
@@ -22,7 +21,8 @@
   <main>
     <section id="about">
       <h2>Hakkımda</h2>
-      <p>Benim adım [İsim Soyisim]. [Yaşınız] yaşındayım ve [şehir] şehrinde yaşıyorum. [Hobileriniz/İlgi alanlarınız vb.] gibi konularda meraklıyım ve zamanımın çoğunu bu konulara ayırıyorum. Ayrıca, [alanınızda ne iş yaptığınızı/okuduğunuzu vb.]</p>
+      <img src="Cvfoto.jfif" alt="Foto">
+      <p>Benim adım Yiğit Tuncay. 20 yaşındayım ve İstanbul şehrinde yaşıyorum.Marmara Üniversitesinde Bilgisayar mühendisliği okuyorum.</p>
     </section>
 
     <section id="services">
@@ -30,32 +30,11 @@
       <ul>
         <li><span class="icon"></span>Web Tasarımı</li>
         <li><span class="icon"></span>Web Geliştirme</li>
-        <li><span class="icon"></span>SEO</li>
+        <li><span class="icon"></span>Java</li>
+        <li><span class="icon"></span>Python</li>
+        <li><span class="icon"></span>C,C++</li>
       </ul>
     </section>
-
-    <section id="portfolio">
-      <h2>Portfolyo</h2>
-      <div class="grid">
-        <figure>
-          <img src="https://via.placeholder.com/500x350" alt="Proje 1">
-          <figcaption>Caption 1</figcaption>
-        </figure>
-        <figure>
-          <img src="https://via.placeholder.com/500x350" alt="Proje 2">
-          <figcaption>Caption 2</figcaption>
-        </figure>
-        <figure>
-          <img src="https://via.placeholder.com/500x350" alt="Proje 3">
-          <figcaption>Caption 3</figcaption>
-        </figure>
-        <figure>
-          <img src="https://via.placeholder.com/500x350" alt="Proje 4">
-          <figcaption>Caption 4</figcaption>
-        </figure>
-      </div>
-    </section>
-
     <section id="contact">
       <h2>İletişim</h2>
       <form>
