--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <section id="about">
       <h2>Hakkımda</h2>
-      <img src="Cvfoto.jfif" alt="Foto">
+      <img src="/images/Cvfoto.jpg" alt="Cvfoto">
       <p>Benim adım Yiğit Tuncay. 20 yaşındayım ve İstanbul şehrinde yaşıyorum.Marmara Üniversitesinde Bilgisayar mühendisliği okuyorum.</p>
     </section>
 
