--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Kişisel Sayfam</title>
+  <title>Yiğit TUNCAY</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
@@ -21,8 +21,11 @@
   <main>
     <section id="about">
       <h2>Hakkımda</h2>
-      <img src="/images/Cvfoto.jpg" alt="Cvfoto">
+      <img src="/images/Cvfoto.jpg" alt="Cvfoto" width="500" height="300">
       <p>Benim adım Yiğit Tuncay. 20 yaşındayım ve İstanbul şehrinde yaşıyorum.Marmara Üniversitesinde Bilgisayar mühendisliği okuyorum.</p>
+      <a href="https://www.linkedin.com/in/yigituncayy/">
+        <img src="/images/linkedin.png" alt="linkedin">
+      </a>
     </section>
 
     <section id="services">
