--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
   <main>
     <section id="about">
       <h2>Hakkımda</h2>
-      <img src="/images/Cvfoto.jpg" alt="Cvfoto" width="500" height="300">
-      <p>Benim adım Yiğit Tuncay. 20 yaşındayım ve İstanbul şehrinde yaşıyorum.Marmara Üniversitesinde Bilgisayar mühendisliği okuyorum.</p>
-      <a href="https://www.linkedin.com/in/yigituncayy/">
-        <img src="/images/linkedin.png" alt="linkedin">
-      </a>
+      <img src="/images/Cvfoto.jpg" alt="Cvfoto" width="300" height="300">
+      <p>Merhaba adım Yiğit TUNCAY.Marmara Üniversitesi bilgisayar mühendisliği öğrencisiyim.</p>
+      <div class="logos">
+        <a href="https://www.linkedin.com/in/yigituncayy/">
+            <img class="logo" src="/images/linkedin.png" alt="LinkedIn Logo" width="40" height="40">
+        </a>
+        <a href="https://github.com/yigituncayy">
+            <img class="logo"  src="/images/github.png" alt="GitHub Logo" width="40" height="40">
+        </a>
+        <a href="mailto:yigituncayy@gmail.com">
+            <img class="logo" src="/images/email.png" alt="Email Logo" width="40" height="40">
+        </a>
+    </div>
     </section>
 
     <section id="services">
