--- a/index.html
+++ b/index.html
@@ -1,75 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="logo">
-          <a href="#">My Website</a>
-        </div>
-        <ul class="navigation">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="menu-toggle">
-          <i class="fas fa-bars"></i>
-        </div>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <title>Yiğit TUNCAY</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  <header>
+    <h1>Hoş Geldiniz!</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">Hakkımda</a></li>
+        <li><a href="#services">Hizmetlerim</a></li>
+        <li><a href="#contact">İletişim</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Welcome to My Website</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vestibulum diam vitae erat vulputate, a pharetra libero dictum. Sed vel urna tristique, sagittis nunc quis, aliquet sapien.</p>
-        <button>Learn More</button>
-      </div>
+  <main>
+    <section id="about">
+      <h2>Hakkımda</h2>
+      <img src="/images/Cvfoto.jpg" alt="Cvfoto" width="300" height="300">
+      <p>Merhaba adım Yiğit TUNCAY.Marmara Üniversitesi bilgisayar mühendisliği öğrencisiyim.</p>
+      <div class="logos">
+        <a href="https://www.linkedin.com/in/yigituncayy/">
+            <img class="logo" src="/images/linkedin.png" alt="LinkedIn Logo" width="40" height="40">
+        </a>
+        <a href="https://github.com/yigituncayy">
+            <img class="logo"  src="/images/github.png" alt="GitHub Logo" width="40" height="40">
+        </a>
+        <a href="mailto:yigituncayy@gmail.com">
+            <img class="logo" src="/images/email.png" alt="Email Logo" width="40" height="40">
+        </a>
+    </div>
     </section>
 
-    <section class="services">
-      <h2>Our Services</h2>
-      <div class="service-container">
-        <div class="service">
-          <i class="fas fa-laptop-code"></i>
-          <h3>Web Development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vestibulum diam vitae erat vulputate, a pharetra libero dictum.</p>
-        </div>
-        <div class="service">
-          <i class="fas fa-mobile-alt"></i>
-          <h3>Mobile App Development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vestibulum diam vitae erat vulputate, a pharetra libero dictum.</p>
-        </div>
-        <div class="service">
-          <i class="fas fa-chart-line"></i>
-          <h3>Digital Marketing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vestibulum diam vitae erat vulputate, a pharetra libero dictum.</p>
-        </div>
-      </div>
+    <section id="services">
+      <h2>Hizmetlerim</h2>
+      <ul>
+        <li><span class="icon"></span>Web Tasarımı</li>
+        <li><span class="icon"></span>Web Geliştirme</li>
+        <li><span class="icon"></span>Java</li>
+        <li><span class="icon"></span>Python</li>
+        <li><span class="icon"></span>C,C++</li>
+      </ul>
     </section>
-
-    <section class="contact">
-      <h2>Contact Us</h2>
+    <section id="contact">
+      <h2>İletişim</h2>
       <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
-
-        <button type="submit">Submit</button>
+        <label for="name">İsim:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">E-posta:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Mesaj:</label>
+        <textarea id="message" name="message" required></textarea>
+        <button type="submit">Gönder</button>
       </form>
     </section>
+  </main>
 
-    <footer>
-      <p>&copy; 2023 My Website. All Rights Reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-  </body>
+  <footer>
+    <p>© 2023 - Kişisel Sayfam</p>
+  </footer>
+</body>
 </html>
