--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <textarea id="message" name="message" required></textarea>
         <button type="submit">Gönder</button>
       </form>
+      <button onclick="animateBox()">Kutuyu hareket ettir</button>
+      <div class="box"></div>
+
     </section>
   </main>
 
