--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
         <textarea id="message" name="message" required></textarea>
         <button type="submit">Gönder</button>
       </form>
-      <button onclick="animateBox()">Kutuyu hareket ettir</button>
-      <div class="box"></div>
+      <button onclick="openPopup()">Popup Pencere Aç</button>
 
+      <div id="popup">
+        <h2>Hoşgeldiniz!</h2>
+        <p>Bu bir pop-up penceresidir.</p>
+        <button onclick="closePopup()">Kapat</button>
+      </div>
+      
     </section>
   </main>
 
